--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -393,7 +393,7 @@ ja:
     warning: このデータは気をつけて取り扱ってください。他の人と共有しないでください！
     your_token: アクセストークン
   auth:
-    agreement_html: スパム避けのため<span style="color : red;">登録ボタンを押すとに認証画面が出ます。</span> <a href="%{rules_path}">インスタンスのルール</a> の中にユーザー名とパスワードの説明がありますので入力してください。<br />登録すると <a href="%{rules_path}">インスタンスのルール</a> と <a href="%{terms_path}">プライバシーポリシー</a> に従うことに同意したことになります。
+    agreement_html: スパム避けのため<strong>登録ボタンを押すとに認証画面が出ます。</strong> <a href="%{rules_path}">インスタンスのルール</a> の中にユーザー名とパスワードの説明がありますので入力してください。<br>登録すると <a href="%{rules_path}">インスタンスのルール</a> と <a href="%{terms_path}">プライバシーポリシー</a> に従うことに同意したことになります。
     change_password: パスワード
     confirm_email: メールアドレスの確認
     delete_account: アカウントの削除
