--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1003,6 +1003,8 @@ en:
     contrast: Mastodon (High contrast)
     default: Mastodon (Dark)
     mastodon-light: Mastodon (Light)
+    instance-ticker-type-0: Mastodon (Instance Ticker Type-0)
+    instance-ticker-type-1: Mastodon (Instance Ticker Type-1)
   time:
     formats:
       default: "%b %d, %Y, %H:%M"
