--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1003,8 +1003,10 @@ en:
     contrast: Mastodon (High contrast)
     default: Mastodon (Dark)
     mastodon-light: Mastodon (Light)
-    instance-ticker-type-0: Mastodon (Instance Ticker Type-0)
-    instance-ticker-type-1: Mastodon (Instance Ticker Type-1)
+    instance-ticker-type-0: Mastodon (Dark) + Ticker0
+    instance-ticker-type-0-light: Mastodon (Light) + Ticker0
+    instance-ticker-type-1: Mastodon (Dark) + Ticker1
+    instance-ticker-type-1-light: Mastodon (Light) + Ticker1
   time:
     formats:
       default: "%b %d, %Y, %H:%M"
